--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,41 @@
 .read-the-docs {
   color: #888;
 }
+
+.champion-gallery {
+  max-width: 940px;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.champion-select-container {
+  height: 80px;
+  margin: 1em 1em 1em 0;
+  flex: 0 1 80px;
+}
+
+img {
+  max-width: 100%;
+  margin: 0;
+}
+
+.image-caption {
+  margin: 0;
+  text-align: center;
+}
+
+button {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.swarm-header {
+  color: rgba(236, 227, 205);
+  text-align: start;
+}
