--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 :root {
+  background-color: rgb(3 12 19);
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(236, 227, 205);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
