--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,19 @@
 }
 
 .champion-select-container {
-  height: 80px;
+  margin: 1em 1em 1em 0;
+  flex: 0 1 80px;
+}
+
+.champion-select-container:hover {
+  margin: 0.5em 0.5em 0.5em 0;
+}
+
+.champion-select-container img:hover {
+  border: 5px, solid, rgb(186, 149, 64);
+}
+
+.champion-display-container {
   margin: 1em 1em 1em 0;
   flex: 0 1 80px;
 }
